PLANET 1704 Fixing button alignment for large screen size.

--- a/assets/scss/common/_covers.scss
+++ b/assets/scss/common/_covers.scss
@@ -225,9 +225,4 @@
   margin: 15px auto;
   width: 92%;
   cursor: pointer;
-
-  @include x-large-and-up {
-    margin: 20px 0;
-    width: 86%;
-  }
 }
